Fix styles
When creating a new component, the styles were messed up. Fixed them.

--- a/src/app/unit-info/unit-info.component.scss
+++ b/src/app/unit-info/unit-info.component.scss
@@ -1,8 +1,10 @@
 @import 'src/app/sass/globals.scss';
 
-.army-counter {
+:host {
     height: 30%;
+}
 
+.army-counter {
     span {
         padding-left: 20px;
         padding-right: 20px;
